test/fail/undefined_func.min
program
    function void a do b;
    ;
    function void b do 1!
start a;
end
